# opengl_tutorial

./: .clang-format  .gitignore  CMakeLists.txt  Matrix.h  Object.h  README.md  Shape.h  ShapeIndex.h  SolidShape.h  SolidShapeIndex.h  Vector.h  Window.h  main.cpp  point.frag  point.vert  window.h
